--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,3 +7,12 @@ test:
 run: build
 	@./bin/main
 
+migration:
+	@migrate create -ext sql -dir cmd/migrate/migrations $(filter-out $@, $(MAKECMDGOALS))
+
+migrate-up:
+	@go run cmd/migrate/main.go up 
+
+migrate-down:
+	@go run cmd/migrate/main.go down 
+
